[package]
name = "tc"
version = "0.0.1"
authors = ["Mohit Mayank"]
edition = "2021"
description = "A Rust library for interacting with the Linux Traffic Control (tc) subsystem using Netlink"

[dependencies]
thiserror = "1.0"
netlink-packet-route = "0.17"
netlink-packet-core = "0.7"
netlink-sys = "0.8"
netlink-packet-utils = "0.5"
