[package]
name = "netlink-tc"
version = "0.0.3"
authors = ["Mohit Mayank"]
edition = "2021"
description = "A Rust library for interacting with the Linux Traffic Control (tc) subsystem using Netlink"
readme = "README.md"
repository = "https://github.com/mmynk/rust-tc"
license = "MIT OR Apache-2.0"
keywords = ["netlink", "rtnetlink", "tc", "linux"]

[dependencies]
bincode = "1"
netlink-packet-route = "0.17"
netlink-packet-core = "0.7"
netlink-sys = "0.8"
netlink-packet-utils = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
nix = { version = "0.27", features = ["net"] }

[build-dependencies]
bindgen = "0.69"
